// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<View>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/edition-slices/assets/daily-universal-register.png",
      }
    }
  />
  <Text>
    Daily Universal Register
  </Text>
  <TileS />
  <View />
  <TileS />
  <View />
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/edition-slices/assets/leaves.png",
      }
    }
  />
  <TileS />
  <View />
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/edition-slices/assets/cake.png",
      }
    }
  />
  <TileS />
</View>
`;

exports[`1. secondary one and four 1`] = `
<View>
  <View>
    <TheSTLogo
      height={40}
      width={60}
    />
  </View>
  <View />
  <View>
    <View>
      <View>
        <TileN
          tileName="secondary"
        />
      </View>
    </View>
    <View>
      <TileO
        tileName="support1"
      />
      <View />
      <TileO
        tileName="support2"
      />
      <View />
      <TileO
        tileName="support3"
      />
      <View />
      <TileO
        tileName="support4"
      />
    </View>
  </View>
</View>
`;

exports[`1. secondary one and four 2`] = `
<View>
  <View>
    <TheTimesLogo
      height={40}
      width={42}
    />
  </View>
  <View />
  <View>
    <View>
      <View>
        <TileN
          tileName="secondary"
        />
      </View>
    </View>
    <View>
      <TileO
        tileName="support1"
      />
      <View />
      <TileO
        tileName="support2"
      />
      <View />
      <TileO
        tileName="support3"
      />
      <View />
      <TileO
        tileName="support4"
      />
    </View>
  </View>
</View>
`;

exports[`2. lead one full width 1`] = `
<TileA
  tileName="lead"
/>
`;

exports[`2. leaders 1`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/st-masthead.png",
        }
      }
    />
    <View>
      <Text>
         Leading Articles 
      </Text>
    </View>
  </View>
  <View>
    <TileM
      tileName="leader1"
    />
    <View />
    <TileM
      tileName="leader2"
    />
    <View />
    <TileM
      tileName="leader3"
    />
  </View>
</View>
`;

exports[`2. leaders 2`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/times-leading-header.png",
        }
      }
    />
    <View>
      <Text>
         Leading Articles 
      </Text>
    </View>
  </View>
  <View>
    <TileM
      tileName="leader1"
    />
    <View />
    <TileM
      tileName="leader2"
    />
    <View />
    <TileM
      tileName="leader3"
    />
  </View>
</View>
`;

exports[`3. lead one and one 1`] = `
<View>
  <TileA
    tileName="lead"
  />
  <TileB
    tileName="support"
  />
</View>
`;

exports[`4. lead one and four 1`] = `
Array [
  <TileI
    tileName="lead"
  />,
  <View>
    <TileJ
      tileName="support1"
    />
    <View />
    <TileJ
      tileName="support2"
    />
    <View />
    <TileJ
      tileName="support3"
    />
    <View />
    <TileJ
      tileName="support4"
    />
  </View>,
]
`;

exports[`5. standard 1`] = `
<View>
  <TileK
    breakpoint="small"
  />
  <View />
  <TileK
    breakpoint="small"
  />
  <View />
  <TileK
    breakpoint="small"
  />
  <View />
  <TileK
    breakpoint="small"
  />
  <View />
  <TileK
    breakpoint="small"
  />
</View>
`;

exports[`6. lead two no pic and two 1`] = `
<View>
  <TileF
    tileName="lead1"
  />
  <View />
  <TileB
    tileName="lead2"
  />
  <View />
  <TileD
    tileName="support1"
  />
  <View />
  <TileE
    tileName="support2"
  />
</View>
`;

exports[`7. secondary one 1`] = `
<TileA
  tileName="secondary"
/>
`;

exports[`8. secondary one and columnist 1`] = `
<View>
  <TileT
    tileName="secondary"
  />
  <View />
  <TileH
    tileName="columnist"
  />
</View>
`;

exports[`9. secondary four 1`] = `
Array [
  <View>
    <View>
      <TileC
        tileName="secondary1"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary2"
      />
    </View>
  </View>,
  <View />,
  <View>
    <View>
      <TileC
        tileName="secondary3"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary4"
      />
    </View>
  </View>,
]
`;

exports[`10. secondary one and four 1`] = `
<View>
  <View>
    <TheTimesLogo
      height={40}
      width={42}
    />
  </View>
  <View />
  <View>
    <View>
      <View>
        <TileN
          tileName="secondary"
        />
      </View>
    </View>
    <View>
      <TileO
        tileName="support1"
      />
      <View />
      <TileO
        tileName="support2"
      />
      <View />
      <TileO
        tileName="support3"
      />
      <View />
      <TileO
        tileName="support4"
      />
    </View>
  </View>
</View>
`;

exports[`11. secondary two and two 1`] = `
Array [
  <View>
    <View>
      <TileC
        tileName="secondary1"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary2"
      />
    </View>
  </View>,
  <View />,
  <View>
    <TileG
      tileName="support1"
    />
  </View>,
  <View />,
  <View>
    <TileG
      tileName="support2"
    />
  </View>,
]
`;

exports[`12. secondary two no pic and two 1`] = `
<View>
  <TileB
    tileName="secondary1"
  />
  <View />
  <TileB
    tileName="secondary2"
  />
  <View />
  <TileG
    tileName="support1"
  />
  <View />
  <TileG
    tileName="support2"
  />
</View>
`;

exports[`13. list two and six no pic 1`] = `
Array [
  <View>
    <View>
      <TileC
        tileName="lead1"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="lead1"
      />
    </View>
  </View>,
  <View />,
  <View>
    <TileL
      tileName="support1"
    />
    <View />
    <TileL
      tileName="support2"
    />
    <View />
    <TileL
      tileName="support3"
    />
    <View />
    <TileL
      tileName="support4"
    />
    <View />
    <TileL
      tileName="support5"
    />
    <View />
    <TileL
      tileName="support6"
    />
  </View>,
]
`;

exports[`14. leaders 1`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/times-leading-header.png",
        }
      }
    />
    <View>
      <Text>
         Leading Articles 
      </Text>
    </View>
  </View>
  <View>
    <TileM
      tileName="leader1"
    />
    <View />
    <TileM
      tileName="leader2"
    />
    <View />
    <TileM
      tileName="leader3"
    />
  </View>
</View>
`;

exports[`15. comment lead and cartoon 1`] = `
<View>
  <TileP
    tileName="lead"
  />
  <View />
  <TileQ
    tileName="cartoon"
  />
</View>
`;

exports[`16. puzzle 1`] = `
<View>
  <View>
    <TileAJ
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </View>
  <View>
    <TileAJ
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </View>
  <View>
    <TileAJ
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </View>
</View>
`;
